@@ -3,6 +3,9 @@
 // For conditions of distribution and use, see copyright notice in irrlicht.h
 
 #include "CParticleAttractionAffector.h"
+
+#ifdef _IRR_COMPILE_WITH_PARTICLES_
+
 #include "IAttributes.h"
 
 namespace irr
@@ -82,3 +85,4 @@ void CParticleAttractionAffector::deserializeAttributes(io::IAttributes* in, io:
 } // end namespace scene
 } // end namespace irr
 
+#endif // _IRR_COMPILE_WITH_PARTICLES_
