@@ -5,6 +5,9 @@
 #ifndef __C_PARTICLE_CYLINDER_EMITTER_H_INCLUDED__
 #define __C_PARTICLE_CYLINDER_EMITTER_H_INCLUDED__
 
+#include "IrrCompileConfig.h"
+#ifdef _IRR_COMPILE_WITH_PARTICLES_
+
 #include "IParticleCylinderEmitter.h"
 #include "irrArray.h"
 
@@ -158,6 +161,7 @@ private:
 } // end namespace scene
 } // end namespace irr
 
+#endif // _IRR_COMPILE_WITH_PARTICLES_
 
 #endif
 
