@@ -5,6 +5,9 @@
 #ifndef __C_PARTICLE_FADE_OUT_AFFECTOR_H_INCLUDED__
 #define __C_PARTICLE_FADE_OUT_AFFECTOR_H_INCLUDED__
 
+#include "IrrCompileConfig.h"
+#ifdef _IRR_COMPILE_WITH_PARTICLES_
+
 #include "IParticleFadeOutAffector.h"
 #include "SColor.h"
 
@@ -58,6 +61,8 @@ private:
 } // end namespace scene
 } // end namespace irr
 
+
+#endif // _IRR_COMPILE_WITH_PARTICLES_
 
 #endif
 
