@@ -5,6 +5,9 @@
 #ifndef __C_PARTICLE_POINT_EMITTER_H_INCLUDED__
 #define __C_PARTICLE_POINT_EMITTER_H_INCLUDED__
 
+#include "IrrCompileConfig.h"
+#ifdef _IRR_COMPILE_WITH_PARTICLES_
+
 #include "IParticleEmitter.h"
 #include "irrArray.h"
 
@@ -117,6 +120,6 @@ private:
 } // end namespace scene
 } // end namespace irr
 
+#endif // _IRR_COMPILE_WITH_PARTICLES_
 
 #endif
-
